dark mode fix -1

--- a/src/assets/scss/_tabresponsiveness.scss
+++ b/src/assets/scss/_tabresponsiveness.scss
@@ -1,7 +1,4 @@
-@media (prefers-color-scheme:dark) {
-    $black:#f9f6ee;
-    $white:#1b1c1c;
-}
+
 
 @media screen and (min-width:680px)
 and (max-width:920px){
